--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
 </head>
 
     <div class='headerBlock'>
-
-        <div class='mainTeamLogo'>
-
+        <div>
+            <a href="https://www.hilliardtravelbaseball.org/">
+                <img id="teamLogo" src="Hilliard Panthers Logo.png"/></a>
+            <span class="playerName">Xyler Gabriel Hayden</span>
+            <span class='playerPosition'><br><br>Pitcher/Outfielder</span>
+            <span class='searchBox'>
+                <input id="textSearch" type="text">
+                <img id="searchIcon" src="./searchicon.png">
+            </span>        
         </div>
 
-        <h4 class='playersName'>Xyler Gabriel Hayden</h4>
-
-        <div class='inputBox'>
-            <input id="text1" type="text">
-            <img id="searchIcon" src="./searchicon.png" alt="Forward Button">
-        </div>
-
+        
     </div>
 
 <body>
+
+    <div id="first">
+        <div id="second"></div>
+    </div>
 
     <div>
         <br>
