--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 
-    <div class='headerBlock'>
-        <div>
-            <a href="https://www.hilliardtravelbaseball.org/">
-                <img id="teamLogo" src="Hilliard Panthers Logo.png"/></a>
-            <span class="playerName">Xyler Gabriel Hayden</span>
-            <span class="baseballCard">Baseball Card Position</span>
-            <span class='playerPosition'><br><br>Pitcher/Outfielder</span>
-            <span class='searchBox'>
-                <input id="textSearch" type="text">
-                <img id="searchIcon" src="./searchicon.png">
-            </span>        
-        </div>
+<div class='headerBlock'>
+    <div>
+        <a href="https://www.hilliardtravelbaseball.org/">
+            <img id="teamLogo" src="Hilliard Panthers Logo.png"/></a>
+        <span class="playerName">Xyler Gabriel Hayden</span>
+        <span class='playerPosition'>Xyler Hayden<br>Pitcher/Outfielder</span>
+        <span class="baseballWebCards">Baseball WebCards!</span>
+        <span class='searchBox'>
+            <input id="textSearch" type="text">
+            <img id="searchIcon" src="./searchicon.png">
+        </span>        
     </div>
-
-
+</div>
 
 <body>
+
     <div class="teamCollage">
         <div id="first">
             <div id="second"></div>
@@ -43,9 +42,6 @@
             </p>
         </div>
     </div>
-    
-
-    
 
 </body>
 
