Checking_Initial_Margins

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 
 <div class='headerBlock'>
-    <div>
-        <a href="https://www.hilliardtravelbaseball.org/">
-            <img id="teamLogo" src="Hilliard Panthers Logo.png"/></a>
-        <span class="playerName">Xyler Gabriel Hayden</span>
-        <span class='playerPosition'>Xyler Hayden<br>Pitcher/Outfielder</span>
-        <span class="baseballWebCards">Baseball WebCards!</span>
-        <span class='searchBox'>
-            <input id="textSearch" type="text">
-            <img id="searchIcon" src="./searchicon.png">
-        </span>        
-    </div>
+    <a href="https://www.hilliardtravelbaseball.org/">
+        <img id="teamLogo" src="Hilliard Panthers Logo.png"/></a>
+    <span class="playerName">Xyler Gabriel Hayden</span>
+    <span class="baseballWebCards">Baseball WebCards!</span>
+    <span class='playerPosition'>Positions Played:
+        <br>Pitcher/Outfielder</span>
+    <span class='searchBox'>
+        <input id="textSearch" type="text">
+        <img id="searchIcon" src="./searchicon.png"></span>
+    <button type='button' class='topBar'>
+        HOME</button>
 </div>
 
 <body>
@@ -29,21 +29,14 @@
         <div id="first">
             <div id="second"></div>
         </div>
-        
-        <div>
-            <br>
-            <button type='button' class='homeButton'>
-                HOME</button>
-        </div>
 
         <div>
             <p class="playerInfo">
-                Where to place this
+                Where to place this with so many words
             </p>
         </div>
     </div>
 
 </body>
-
 
 </html>
